# rvm

./: .gitignore  .rvmrc  Cargo.toml  README.md  STRUCTURE.md  install.sh  rvm.sh
common_helper_functions/: path_manager.sh  prune.sh  remove.sh  removeall.sh  set.sh  use.sh
docs/: DEVELOPMENT_NOTES.md  WISHLIST.md
managers/: pnpm-manager.sh  rvm-manager.sh
runners/: bun.sh  node.sh  npm.sh  pnpm.sh  typescript.sh  yarn.sh
runners_old/: bun.sh  javascript.sh  node_old.sh  typescript.sh
runtimes/: jq.sh  node.sh  pnpm.sh  rvm.sh
runtimes/archive/: jq_old.sh  pnpm_old.sh  rvm_old.sh
runtimes/common_helper_functions/: path_manager.sh
runtimes_old/: deno.sh  pnpm.sh
src/: cli.rs  main.rs  watcher.rs
src/runtime/: go.rs  mod.rs  node.rs  tailwindcss.rs
src/utils/: cli.rs  download.rs  error.rs  list.rs  mod.rs  profile.rs  ui.rs  version.rs  watcher.rs
templates/: .rvmshrc_template  runtime_template.sh
