[package]
name = "rvm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
flate2 = "1.1.2"
notify = "8.1.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tar = "0.4.44"
termion = "4.0.5"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
xz2 = "0.1.7"
